# goodreads

./: .gitignore  README.md  main.py  pyproject.toml  tox.ini
src/goodreads/: cli.py  index.py  ranker.py  search.py  server.py
src/goodreads/templates/: index.html
