[tool.poetry]
name = "goodreads-curator"
version = "0.0.1"
description = ""
authors = ["Martin Courtois <martin.courtois@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"