[tool.poetry]
name = "goodreads"
version = "0.0.1"
description = ""
authors = ["Martin Courtois <martin.courtois@protonmail.com>"]
packages = [{include = "goodreads", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
fire = "^0.4.0"

[tool.poetry.scripts]
goodreads = 'goodreads.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"